fixed layout issues

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -156,9 +156,8 @@ body > .grid {
     left: 0;
 }
 
-.ui.container {
-  padding: 0;
-  margin: 0;
+.page-content {
+  padding: 2em;
 }
 
 .ui.header {
